New blog post: "Your app is not compliant with Google Play Policies: A story from hell"

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,9 @@
                 {% if page.show_title != false %}
                 <h1>{{ page.title }}</h1>
                 {% endif %}
-                {{ content }}
+                <div id="{{ page.collection }}">
+                  {{ content }}
+                </div>
             </div>
         </div>
     </body>
